--- a/08-dplyr.Rmd
+++ b/08-dplyr.Rmd
@@ -52,6 +52,14 @@ memory. The database connections essentially remove that limitation in that you
 can have a database of many 100s GB, conduct queries on it directly, and pull
 back just what you need for analysis in R.
 
+### Five verbs in `dplyr`
+
+- Select certain columns of data.
+- Filter your data to select specific rows.
+- Arrange the rows of your data into an order.
+- Mutate your data frame to contain new columns.
+- Summarise chunks of you data in some way
+
 ### Selecting columns and filtering rows
 
 We're going to learn some of the most common `dplyr` functions: `select()`,
